--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,12 +1,21 @@
 .header__lang-link{
-    height: 30px;
-    width: 28px;
-    text-decoration: none;
     color: white;
     transition: 0,4 ease-in;
     padding-left: 18px;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 117%;
+    text-align: right;
+    text-decoration: none;
 }
 
 .header__lang-link:hover{
-    text-decoration: underline;
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 767px){
+    .header__lang-link{
+        font-size: 18px;
+        line-height: 111%;
+    }
 }
