--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,10 +1,25 @@
 .header{
-    width: 95vw;
-    min-height: 52px;
-    padding-top: 28px;
-    padding-bottom: 48px;
+    padding: 28px 48px 56px 48px;
     display: flex;
     flex-wrap: wrap;
     justify-content:space-between;
     margin: 0 auto;
+}
+
+@media screen and (max-width: 1024px){
+    .header{
+        padding:  28px 48px 48px 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header{
+        padding: 28px 24px 48px 24px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .header{
+        padding: 16px 16px 48px 16px;
+    }
 }
