--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,14 @@
 .lead__caption{
-    text-align: left;
-    margin: auto;
-    font-size: 0.625rem;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 14px;
     letter-spacing: 0.15em;
-    padding-top: 8px;
     text-transform: uppercase;
-    width: 85vw;
-    min-width: 768px;
-    /*разобраться с шириной и сдвигами*/
+    margin: 0;
+}
+
+@media screen and (max-width: 1023px){
+    .lead__caption{
+        padding: 0 24px;
+    }
 }
