--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,9 +1,17 @@
 .lead__subtitle{
     margin: auto;
-    font-size: 1.875rem;
-    font-weight: normal;
-    padding-top: 32px;
-    padding-bottom: 64px;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
     text-align: center;
-    width: 640px;
+    max-width: 640px;
+    padding-bottom: 64px;
+}
+
+@media screen and (max-width: 767px) {
+    .lead__subtitle{
+        font-size: 16px;
+        line-height: 125%;
+        padding-bottom: 40px;
+    }
 }
