--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,16 @@
 .lead__title{
-    width: 720px;
-    text-align: center;
-    margin: auto;
-    font-size: 6rem;
+    max-width: 720px;
+    margin: 0 auto;
     font-weight: 900;
+    font-size: 96px;
+    line-height: 100px;
+    text-align: center;
+    padding-bottom: 32px;
+}
+
+@media screen and (max-width: 767px) {
+    .lead__title{
+        font-size: 40px;
+        line-height: 110%;
+    }
 }
