--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,33 +1,12 @@
-
- @font-face {
-    font-family: 'Inter';
-    src: 
-    url("../../fonts/Inter-Regular.eot") format("embedded-opentype"), 
-    url("../../fonts/Inter-Regular.woff") format("woff"), 
-    url("../../fonts/Inter-Regular.ttf") format("truetype"), 
-    url("../../fonts/Inter-Regular.svg") format("svg");
-    font-weight: normal;
-    font-style: normal;
-}
-  @font-face {
-    font-family: 'Inter';
-    src: 
-    url("../../fonts/Inter-Bold.eot") format("embedded-opentype"), 
-    url("../../fonts/Inter-Bold.woff2") format("woff2"), 
-    url("../../fonts/Inter-Bold.ttf") format("truetype"), 
-    url("../../fonts/Inter-Regular.svg") format("svg");
-    font-weight: bold;
-    font-style: normal;
-  }
-
-body{
-    margin: 0;
-}
-
 .page{
-    max-width: 1600px;
-    font-family: 'Inter';
+    max-width: 1280px;
+    font-family: 'Inter', 'Helvetica', sans-serif;
     margin: 0 auto;
     background-color: #2A2C2F;
     color: white;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
 }
