--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -12,6 +12,7 @@
 @media screen and (max-width: 767px) {
     .cover__title{
         font-size: 32px;
-        line-height: 109%
+        line-height: 109%;
+        max-width: 288px;
     }
 }
