--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,12 +1,15 @@
 .header__lang-link{
     color: white;
     transition: 0,4 ease-in;
-    padding-left: 18px;
     font-weight: 400;
     font-size: 24px;
     line-height: 117%;
     text-align: right;
     text-decoration: none;
+}
+
+.header__lang-link:last-child{
+    border-bottom: 0;
 }
 
 .header__lang-link:hover{
