--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,5 +1,4 @@
 .header__lang-links{
-    list-style: none;
     font-weight: 400;
     padding: 0;
     margin: 0;
@@ -7,4 +6,5 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-end;
+    gap: 18px;
 }
