--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,6 +5,7 @@
     letter-spacing: 0.15em;
     text-transform: uppercase;
     margin: 0;
+    padding-top: 8px;
 }
 
 @media screen and (max-width: 1023px){
