--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,6 +8,12 @@
     padding-bottom: 64px;
 }
 
+@media screen and (max-width: 1023px) {
+    .lead__subtitle{
+        padding-bottom: 56px;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .lead__subtitle{
         font-size: 16px;
