--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,6 @@
 .cover__subtitle{
     margin: 0 auto;
+    font-family: 'Inter', 'Helvetica', sans-serif;
     max-width: 360px;
     text-align: center;
     font-weight: 400;
