--- a/blocks/place/__website-link/place__website-link.css
+++ b/blocks/place/__website-link/place__website-link.css
@@ -1,4 +1,5 @@
 .place__website-link{
+    font-family: 'Inter', 'Helvetica', sans-serif;
     text-decoration: underline;
     color: white;
     font-weight: 400;
