--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,6 @@
 .cover__title{
     margin: 0 auto;
+    font-family: 'Inter', 'Helvetica', sans-serif;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
