--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,6 +3,11 @@
     text-decoration: none;
     padding-right: 18px;
     transition: 0.5 ease-in;
+    margin: 0;
+}
+
+.footer__link:last-child{
+    padding: 0px;
 }
 
 .footer__link:hover{
@@ -12,8 +17,5 @@
 @media screen and (max-width: 767px) {
     .footer__link{
         padding-bottom: 32px;
-    }
-    .footer__link:last-child{
-        padding-bottom: 0px;
     }
 }
