--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,4 +1,5 @@
 .intro__list{
+    font-family: 'Inter', 'Helvetica', sans-serif;
     font-weight: 700;
     font-size: 12px;
     line-height: 150%;
