--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,4 +1,5 @@
 .intro__text{
+    font-family: 'Inter', 'Helvetica', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
