--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,4 +1,5 @@
 .lead__caption{
+    font-family: 'Inter', 'Helvetica', sans-serif;
     font-weight: 400;
     font-size: 10px;
     line-height: 14px;
@@ -11,5 +12,12 @@
 @media screen and (max-width: 1023px){
     .lead__caption{
         padding: 0 24px;
+    }
+}
+
+
+@media screen and (max-width: 767px){
+    .lead__caption{
+        padding: 0 16px;
     }
 }
