--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,21 +1,25 @@
 .lead__image{
-    max-width: 928px;
+    max-width: 984px;
+    min-height: 615px;
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1279px){
     .lead__image{
-        max-width: calc(100vw - 48px - 48px);
+        max-width: 928px;
+        min-height: 580px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .lead__image{
         max-width: 768px;
+        min-height: 480px;
     }
 }
 
 @media screen and (max-width: 320px){
     .lead__image{
-        max-width: 928px;
+        max-width: 320px;
+        min-height: 200px;
     }
 }
