--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,11 +1,12 @@
 .lead__subtitle{
     margin: auto;
+    font-family: 'Inter', 'Helvetica', sans-serif;
     font-weight: 400;
     font-size: 30px;
     line-height: 36px;
     text-align: center;
     max-width: 640px;
-    padding-bottom: 64px;
+    padding-bottom: 56px;
 }
 
 @media screen and (max-width: 1023px) {
