--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,4 +1,5 @@
 .lead__title{
+    font-family: 'Inter', 'Helvetica', sans-serif;
     max-width: 720px;
     margin: 0 auto;
     font-weight: 900;
@@ -12,5 +13,6 @@
     .lead__title{
         font-size: 40px;
         line-height: 110%;
+        padding-bottom: 16px;
     }
 }
