--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,9 +4,15 @@
     padding-bottom: 92px;
 }
 
+@media screen and (max-width: 1279px) {
+    .lead{
+        padding: 0 48px 88px 48px;
+    }
+}
+
 @media screen and (max-width: 1023px) {
     .lead{
-        padding-bottom: 88px;
+        padding: 0 0 88px;
     }
 }
 
