--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -18,12 +18,14 @@
 
 @media screen and (max-width: 1023px) {
     .photo-grid{
+        gap: 16px 16px;
         padding: 0 24px 88px 24px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .photo-grid{
+        gap: 12px;
         padding: 0 16px 64px 16px;
     }
 }
