--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,4 +1,5 @@
 .place__url-heading{
+    font-family: 'Inter', 'Helvetica', sans-serif;
     margin: 0;
     font-weight: 400;
     font-size: 12px;
