--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,25 +1,31 @@
 .cover{
     margin: 0 48px 92px;
     max-width: 1184px;
-    max-height: 740px;
+    min-height: 740px;
     padding: 0;
 }
 
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1100px) {
     .cover{
+        max-width: 1024px;
+        min-height: 640px;
         margin: 0 auto 92px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .cover{
-        margin-bottom: 88px;
+        max-width: 768px;
+        min-height: 480px;
+        margin: 0 auto 88px;
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 450px) {
     .cover{
-        margin-bottom: 64px;
+        max-width: 320px;
+        min-height: 200px;
+        margin: 0 auto 64px;
     }
 }
