--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,25 +1,15 @@
 .lead__image{
+    width: 100%;
+    height: 100%;
     max-width: 984px;
     min-height: 615px;
+    margin: 0 auto;
+
 }
 
-@media screen and (max-width: 1279px){
+@media screen and (max-width: 1024px){
     .lead__image{
-        max-width: 928px;
-        min-height: 580px;
-    }
-}
-
-@media screen and (max-width: 1023px) {
-    .lead__image{
-        max-width: 768px;
-        min-height: 480px;
-    }
-}
-
-@media screen and (max-width: 320px){
-    .lead__image{
-        max-width: 320px;
-        min-height: 200px;
+        max-width: 100vw;
+        min-height: calc( 100vw * 62.5/ 100);
     }
 }
