--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,19 +4,21 @@
     padding-bottom: 92px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1024px) {
     .lead{
-        padding: 0 48px 88px 48px;
+        padding-bottom: 88px;
+        margin: 0 48px;
     }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 768px) {
     .lead{
-        padding: 0 0 88px;
+        margin: 0;
+
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 450px) {
     .lead{
         padding-bottom: 64px;
     }
