--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,7 +2,7 @@
     color: #fff;
     text-decoration: none;
     padding-right: 18px;
-    transition: 0.5 ease-in;
+    transition: 0.5s ease-in;
     margin: 0;
 }
 
