--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -1,4 +1,6 @@
 .footer__menu{
+    display: flex;
+    flex-direction: row;
     margin: 0;
     font-style: normal;
     font-weight: 400;
@@ -11,7 +13,6 @@
         font-size: 24px;
         line-height: 100%;
         padding-bottom: 48px;
-        display: flex;
         flex-direction: column;
     }
 }
