--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,6 @@
 .header__lang-link{
     color: white;
-    transition: 0,4 ease-in;
+    transition: 0,4s ease-in;
     font-weight: 400;
     font-size: 24px;
     line-height: 117%;
