--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,11 +2,10 @@
     font-family: 'Inter', 'Helvetica', sans-serif;
     font-weight: 400;
     font-size: 10px;
-    line-height: 14px;
+    line-height: 140%;
     letter-spacing: 0.15em;
     text-transform: uppercase;
     margin: 0;
-    padding-top: 8px;
 }
 
 @media screen and (max-width: 1023px){
