--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,15 +1,6 @@
 .lead__image{
     width: 100%;
-    height: 100%;
-    max-width: 984px;
-    min-height: 615px;
+    height: calc(100% * 62.5 / 100%);
     margin: 0 auto;
-
-}
-
-@media screen and (max-width: 1024px){
-    .lead__image{
-        max-width: 100vw;
-        min-height: calc( 100vw * 62.5/ 100);
-    }
+    padding-bottom: 6px;
 }
