--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,20 +3,21 @@
     font-family: 'Inter', 'Helvetica', sans-serif;
     font-weight: 400;
     font-size: 30px;
-    line-height: 36px;
+    line-height: 120%;
     text-align: center;
     max-width: 640px;
-    padding-bottom: 56px;
+    padding-bottom: 62px;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1024px) {
     .lead__subtitle{
         padding-bottom: 56px;
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 650px) {
     .lead__subtitle{
+        max-width: 300px;
         font-size: 16px;
         line-height: 125%;
         padding-bottom: 40px;
